--- a/source/elements/agenda/index.pug
+++ b/source/elements/agenda/index.pug
@@ -1,13 +1,13 @@
 section#agenda.agenda.scroll-spy
 
-	h1.section_header.wow.fadeInUp agenda
+	h1.section_header.wow.fadeInUp расписание
 
 	table.agenda-table.wow.fadeInUp
 		thead.agenda-table-head
 			tr
-				th Time
-				th Speaker
-				th Topic
+				th Время
+				th Докладчик
+				th Название доклада
 		tbody.agenda-table-body
 			each speaker in speakers
 				tr
