--- a/source/elements/buttons/_style.sass
+++ b/source/elements/buttons/_style.sass
@@ -55,6 +55,12 @@
 	&:hover
 		background-color: $primary-blue
 		box-shadow: 0 0 15px 5px $primary-blue
+	&_center
+		display: block
+		margin: 0 auto
+		min-width: 192px
+		max-width: 300px
+		text-align: center
 
 .menu-button
 	@extend .button
