--- a/source/elements/speakers/index.pug
+++ b/source/elements/speakers/index.pug
@@ -1,5 +1,5 @@
 section#speakers.speakers.scroll-spy
-	h1.section_header.wow.fadeInUp speakers
+	h1.section_header.wow.fadeInUp докладчики
 
 	.speakers-list
 		each speaker in speakers
