--- a/source/elements/intro/_style.sass
+++ b/source/elements/intro/_style.sass
@@ -8,22 +8,30 @@
 	flex-direction: column
 	padding: 120px 0 50px
 	min-height: 100vh
+	&-item
+		justify-content: flex-start
 	+min-screen($mobile + 1)
 		padding: 0
 	&-logo
 		margin: 2% auto 5%
 		display: inline-block
-		max-width: 60%
+		max-width: 70%
 		height: auto
 		+min-screen($mobile + 1)
-			margin: 2% auto
-			max-width: 35%
+			margin: 100px auto 20px
+			max-width: 30%;
+		&-item
+			+min-screen($tablet + 1)
+				margin: 150px auto 20px
+				max-width: 25%;
 	&-event_name
 		font-size: 20px
 		color: $black
 		margin-top: 20px
 		+min-screen($mobile + 1)
 			font-size: 44px
+	&-event-item_name
+		margin: 0
 	&-info
 		// overflow: hidden
 		width: 100%
@@ -33,6 +41,8 @@
 		+min-screen($mobile + 1)
 			width: 70%
 			margin: 60px auto 0
+			&_big
+				font-size: 1.3em
 	&-location
 		color: $primary-blue
 		font-size: 17px
@@ -45,6 +55,7 @@
 			text-align: left
 		&-data
 			flex: 1
+			font-style: normal
 		&-icon
 			width: 35px
 			+min-screen($mobile + 1)
