--- a/source/elements/intro/index.pug
+++ b/source/elements/intro/index.pug
@@ -1,16 +1,16 @@
 section.intro#intro.scroll-spy
 	+insert-image("logo.png", "Kharkiv front-eng logo", "intro-logo wow fadeInUp")
-	h1.wow.fadeInUp.intro-event_name(data-wow-delay=".2s") #_0
+	h1.wow.fadeInUp.intro-event_name(data-wow-delay=".2s") #_3
 
 	.intro-info.wow.fadeInUp
 		p.intro-time(data-wow-delay=".3s")
 			+insert-image("clock-ico.png", "time", "intro-time-icon")
-			span 9.12.17
+			span 01.04.18
 				br
-				| 12:00
+				| 11:00
 		a.scroll-link.intro-location(href="#map" data-wow-delay=".3s")
 			+insert-image("map-mark.svg", "location", "intro-location-icon")
 			address.intro-location-data
-				| БЦ Протон
+				| Fabrika,
 				br
-				| Богдана Хмельницкого 24
+				| Благовещенская 1
