--- a/source/elements/map/index.pug
+++ b/source/elements/map/index.pug
@@ -1,4 +1,4 @@
 section.map#map.scroll-spy
-	h1.section_header.wow.fadeInUp location
+	h1.section_header.wow.fadeInUp расположение
 	
 	#map-container.wow.fadeInUp
