--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -1,18 +1,18 @@
 extends ./layout/default_layout
 
 block title_name
-	title=title
+    title=title
 
 
 block main_content
-	include ../elements/preloader/index
-	
-	include ../elements/menu/index
+    include ../elements/preloader/index
+
+    include ../elements/menu/index
 
 
-	include ../elements/intro/index
-	include ../elements/speakers/index
-	include ../elements/agenda/index
-	include ../elements/map/index
-	//- include ../elements/ticket/index
-	
+    include ../elements/intro/index
+    include ../elements/speakers/index
+    include ../elements/agenda/index
+    include ../elements/partners/index
+    include ../elements/archive/index
+    include ../elements/map/index
