add BalkaBook partner

--- a/source/elements/speakers/_style.sass
+++ b/source/elements/speakers/_style.sass
@@ -20,7 +20,7 @@
 			margin-bottom: 100px
 			margin-bottom: 100px
 			flex: 1 0 26%
-			max-width: 26%
+			max-width: 30%
 		&-item
 			width: 100%
 			max-width: 100%
@@ -105,7 +105,7 @@
 			text-transform: uppercase
 			font-size: $text-header-size/1.5
 			+min-screen($mobile - 1)
-				font-size: $text-header-size
+				font-size: 26px
 			&:before
 				@extend %icon
 				content: $icon-bracket-l
