--- a/source/elements/map/index.pug
+++ b/source/elements/map/index.pug
@@ -2,3 +2,10 @@ section.map#map.scroll-spy
 	h1.section_header.wow.fadeInUp расположение
 	
 	#map-container.wow.fadeInUp
+footer.footer
+	a.social-link.email(href="mailto:kharkivfrontend@gmail.com")
+		span.visually-hidden наш email
+	a.social-link.fb(href="https://www.facebook.com/KharkivFrontend/")
+		span.visually-hidden наша страничка на facebook
+	a.social-link.instagram(href="https://www.instagram.com/kharkivfrontend/")
+		span.visually-hidden наша страничка в instagram
