--- a/source/elements/menu/_style.sass
+++ b/source/elements/menu/_style.sass
@@ -102,7 +102,11 @@ header
 					font-size: 20px
 				+landscape-max-screen($mobile)
 					font-size: 18px
-
+.ticket-wrapper
+	display: flex
+	justify-content: flex-end
+.ticket-button
+	margin: 20px 0 0
 
 
 
