--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -13,6 +13,7 @@ block main_content
     include ../elements/intro/index
     include ../elements/speakers/index
     include ../elements/agenda/index
-    include ../elements/partners/index
+    //include ../elements/partners/index
     include ../elements/archive/index
+    include ../elements/friends/index
     include ../elements/map/index
