--- a/source/elements/agenda/_style.sass
+++ b/source/elements/agenda/_style.sass
@@ -32,3 +32,7 @@
 				+min-screen($mobile - 1)
 					padding: 15px 25px
 					display: table-cell
+.text-center
+	text-align: center
+.ticket-wrapper
+	margin-bottom: 30px
