--- a/source/elements/preloader/index.pug
+++ b/source/elements/preloader/index.pug
@@ -1,4 +1,4 @@
-.preloader
+//.preloader
 	// - for (var item = 1; item <= 5; item++)
 	// 	.preloader_item
 	// 		- for (var dot = 1; dot <= 16; dot++)
