--- a/source/sass/_layouts.sass
+++ b/source/sass/_layouts.sass
@@ -62,7 +62,7 @@ input[type="submit"]
 
 .hide
 	display: none !important
-%row
+.ticket-wrapper, .friends-list, %row
 	// overflow: hidden
 	max-width: $mdpi+px
 	margin: 0 auto
