simple setting of Pug

--- a/app/index.pug
+++ b/app/index.pug
@@ -1,3 +1,6 @@
+include templates/head.pug
+include templates/header.pug
+
 main
   section
     .container
@@ -12,5 +15,11 @@ main
         .ba-slide
           img(src='https://via.placeholder.com/150/0000FF/808080 ?Text=Digital.com' alt='text')
       // ba-slider end
-  .triangle
+  
+  section.test
+    p Test text dj
+
   section#map(style='height: 400px; width: 100%;')
+
+
+include templates/footer.pug
