add simple gulp-data

--- a/app/index.pug
+++ b/app/index.pug
@@ -17,7 +17,8 @@ main
       // ba-slider end
   
   section.test
-    p Test text dj
+    p= content
+    p= author
 
   section#map(style='height: 400px; width: 100%;')
 
