--- a/app/templates/head.pug
+++ b/app/templates/head.pug
@@ -4,6 +4,6 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   meta(http-equiv='X-UA-Compatible' content='ie=edge')
   link(rel='stylesheet' href='css/app.min.css')
-  title gulp
+  title= title
 
 body
