--- a/app/templates/header.pug
+++ b/app/templates/header.pug
@@ -2,12 +2,8 @@ header.ba-header
   .container.ba-header__container
     a.ba-logo(href='#') Logo
     nav
-      ul.menu.row
-        li.menu__item
-          a.menu__link(href='#') item 1
-        li.menu__item
-          a.menu__link(href='#') item 2
-        li.menu__item
-          a.menu__link(href='#') item 3
-        li.menu__item
-          a.menu__link(href='#') item 4
+      ul.menu
+        -var menuList = menu
+        each menuItem, index in menuList
+          li.menu__item
+            a.menu__link(href='#'+menuItem[1])=menuItem[0]
